# CHART-PUZZLE

./: CHANGELOG.md  IMPLEMENTATION_PLAN.md  append_history_tmp.py  audit_industries.py  check_naver_link.py  check_stocks.py  debug_daeduck.py  debug_history.md  debug_kakao_jina.py  debug_lnf.py  debug_samsung.py  fix_shipbuilding_data.py  generate_industry_json.py  generate_stock_list.py  jina_kakao_dump.md  migrate_legacy_lessons.py  pre_cache_stocks.py  refine_industries.py  run_batch_v154.bat  run_batch_v160.bat  run_dev.bat  run_project.bat  run_puzzle.bat  run_puzzle_v2.10.51.bat  run_puzzle_v2.10.52.bat  run_puzzle_v2.10.53.bat  task.md  temp_debug.md  test_daeduck.py  test_fnguide_refined.py  test_naver_api_direct.js  test_naver_research.py  test_naver_research2.py  test_trigger_debug.py  test_trigger_debug2.py  tmp_756e873_page.tsx  tmp_debug_doosan.py  tmp_debug_full_day.py  tmp_debug_v1.4.1.py  tmp_f9003a5_page.tsx  (+17 more)
backend/: batch_analyze.py  main.py  pyproject.toml  scraper.py  stock_industry.json  test_news.py  test_scraper.py  trigger_report.json
backend/cache/: 000100.json  000250.json  000270.json  000660.json  000990.json  005380.json  005490.json  005930.json  005935.json  006360.json  009150.json  012330.json  012450.json  018260.json  028300.json  032830.json  034020.json  035420.json  035720.json  036930.json  042700.json  055550.json  058470.json  066970.json  068270.json  086520.json  087010.json  089030.json  097230.json  105560.json  141080.json  178320.json  196170.json  207940.json  247540.json  277810.json  298380.json  329180.json  (+15 more)
(+46 files in other folders)
