[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.2",
    "konlpy>=0.6.0",
    "lxml>=6.0.2",
    "nltk>=3.9.4",
    "pandas>=3.0.1",
    "requests>=2.33.0",
    "uvicorn[standard]>=0.42.0",
    "wordcloud>=1.9.6",
]
